dobot/dobot_ws/log/build_2023-08-04_14-45-15/yolo_pkg/stdout_stderr.log
running egg_info
writing ../../build/yolo_pkg/yolo_pkg.egg-info/PKG-INFO
writing dependency_links to ../../build/yolo_pkg/yolo_pkg.egg-info/dependency_links.txt
writing entry points to ../../build/yolo_pkg/yolo_pkg.egg-info/entry_points.txt
writing requirements to ../../build/yolo_pkg/yolo_pkg.egg-info/requires.txt
writing top-level names to ../../build/yolo_pkg/yolo_pkg.egg-info/top_level.txt
reading manifest file '../../build/yolo_pkg/yolo_pkg.egg-info/SOURCES.txt'
writing manifest file '../../build/yolo_pkg/yolo_pkg.egg-info/SOURCES.txt'
running build
running build_py
copying yolo_pkg/object_detection_sub.py -> /home/ksh/yolo_ws/build/yolo_pkg/build/lib/yolo_pkg
copying yolo_pkg/img_pub.py -> /home/ksh/yolo_ws/build/yolo_pkg/build/lib/yolo_pkg
running install
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
running install_lib
copying /home/ksh/yolo_ws/build/yolo_pkg/build/lib/yolo_pkg/object_detection_sub.py -> /home/ksh/yolo_ws/install/yolo_pkg/lib/python3.10/site-packages/yolo_pkg
copying /home/ksh/yolo_ws/build/yolo_pkg/build/lib/yolo_pkg/img_pub.py -> /home/ksh/yolo_ws/install/yolo_pkg/lib/python3.10/site-packages/yolo_pkg
byte-compiling /home/ksh/yolo_ws/install/yolo_pkg/lib/python3.10/site-packages/yolo_pkg/object_detection_sub.py to object_detection_sub.cpython-310.pyc
  File "/home/ksh/yolo_ws/install/yolo_pkg/lib/python3.10/site-packages/yolo_pkg/object_detection_sub.py", line 15
    	def __init__(self)
    	                  ^
SyntaxError: expected ':'

byte-compiling /home/ksh/yolo_ws/install/yolo_pkg/lib/python3.10/site-packages/yolo_pkg/img_pub.py to img_pub.cpython-310.pyc
running install_data
running install_egg_info
removing '/home/ksh/yolo_ws/install/yolo_pkg/lib/python3.10/site-packages/yolo_pkg-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/yolo_pkg/yolo_pkg.egg-info to /home/ksh/yolo_ws/install/yolo_pkg/lib/python3.10/site-packages/yolo_pkg-0.0.0-py3.10.egg-info
running install_scripts
Installing image_publisher script to /home/ksh/yolo_ws/install/yolo_pkg/lib/yolo_pkg
Installing object_detect_publisher script to /home/ksh/yolo_ws/install/yolo_pkg/lib/yolo_pkg
Installing object_detect_subscriber script to /home/ksh/yolo_ws/install/yolo_pkg/lib/yolo_pkg
writing list of installed files to '/home/ksh/yolo_ws/build/yolo_pkg/install.log'
